model creation and model score

--- a/Ford_Price_Prediction.ipynb
+++ b/Ford_Price_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQs2kbzi+su/hwelxeTteb",
+      "authorship_tag": "ABX9TyMcIvnO9dbeVo9ZB3R1GmzN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1922,12 +1922,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "a9BdkxMniFvg",
-        "outputId": "3ee1cfb4-d5b7-41c7-d154-ffc41fa18feb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "a9BdkxMniFvg",
+        "outputId": "3ee1cfb4-d5b7-41c7-d154-ffc41fa18feb"
       },
       "execution_count": 34,
       "outputs": [
@@ -2144,10 +2144,10 @@
       ],
       "metadata": {
         "id": "yTBtu871RIl7",
-        "outputId": "96333088-c201-485d-8d1c-02ebffd3ff4f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96333088-c201-485d-8d1c-02ebffd3ff4f"
       },
       "execution_count": 36,
       "outputs": [
@@ -2311,11 +2311,11 @@
         "df2.columns"
       ],
       "metadata": {
-        "id": "tcJmxYhKlblk",
-        "outputId": "10f9c64a-cfee-4dd1-f2e1-9e18ca0831d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tcJmxYhKlblk",
+        "outputId": "10f9c64a-cfee-4dd1-f2e1-9e18ca0831d4"
       },
       "execution_count": 43,
       "outputs": [
@@ -2340,12 +2340,12 @@
         "model_dummies.head(3)"
       ],
       "metadata": {
-        "id": "_i3i8soQW60z",
-        "outputId": "c477403c-f721-48f2-96dd-66cb56d7f786",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 222
-        }
+        },
+        "id": "_i3i8soQW60z",
+        "outputId": "c477403c-f721-48f2-96dd-66cb56d7f786"
       },
       "execution_count": 44,
       "outputs": [
@@ -2575,12 +2575,12 @@
         "df2.head()"
       ],
       "metadata": {
-        "id": "GknRLYxpGuRz",
-        "outputId": "75067f36-c7aa-48dd-acbd-3b4252e72c22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "id": "GknRLYxpGuRz",
+        "outputId": "75067f36-c7aa-48dd-acbd-3b4252e72c22"
       },
       "execution_count": 48,
       "outputs": [
@@ -2871,12 +2871,12 @@
         "transmission_dummies.head(3)"
       ],
       "metadata": {
-        "id": "AlESynnGlp1N",
-        "outputId": "d9f87666-546b-481d-d3de-49c8398691f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "AlESynnGlp1N",
+        "outputId": "d9f87666-546b-481d-d3de-49c8398691f8"
       },
       "execution_count": 45,
       "outputs": [
@@ -3028,12 +3028,12 @@
         "df2.head()"
       ],
       "metadata": {
-        "id": "8Dbe26LuH43P",
-        "outputId": "f7afca75-f3ed-47ce-ce25-32badc852968",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "id": "8Dbe26LuH43P",
+        "outputId": "f7afca75-f3ed-47ce-ce25-32badc852968"
       },
       "execution_count": 49,
       "outputs": [
@@ -3324,12 +3324,12 @@
         "fuelType_dummies.head(3)"
       ],
       "metadata": {
-        "id": "WD5sHauAl3bl",
-        "outputId": "e58ea169-c171-4c77-fcb2-8171c0f98b41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "id": "WD5sHauAl3bl",
+        "outputId": "e58ea169-c171-4c77-fcb2-8171c0f98b41"
       },
       "execution_count": 47,
       "outputs": [
@@ -3489,12 +3489,12 @@
         "df2.head()"
       ],
       "metadata": {
-        "id": "0vvX0qKpILTX",
-        "outputId": "664e5bac-d35c-4831-a6d0-1820e3f84576",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "id": "0vvX0qKpILTX",
+        "outputId": "664e5bac-d35c-4831-a6d0-1820e3f84576"
       },
       "execution_count": 50,
       "outputs": [
@@ -3785,12 +3785,12 @@
         "df3.head()"
       ],
       "metadata": {
-        "id": "mbI02JIlITLS",
-        "outputId": "6df5d16e-93fd-4262-eb7a-b069624186e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "id": "mbI02JIlITLS",
+        "outputId": "6df5d16e-93fd-4262-eb7a-b069624186e1"
       },
       "execution_count": 53,
       "outputs": [
@@ -4080,11 +4080,11 @@
         "df3.shape"
       ],
       "metadata": {
-        "id": "FF_DFu-KJRHg",
-        "outputId": "3cc86b83-d868-431d-cca6-e98dd116a649",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FF_DFu-KJRHg",
+        "outputId": "3cc86b83-d868-431d-cca6-e98dd116a649"
       },
       "execution_count": 54,
       "outputs": [
@@ -4107,12 +4107,12 @@
         "X.head(3)"
       ],
       "metadata": {
-        "id": "sEQwBGU-JU_F",
-        "outputId": "8f8a020d-80ae-45a8-e7fd-f8ae6be615d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
-        }
+        },
+        "id": "sEQwBGU-JU_F",
+        "outputId": "8f8a020d-80ae-45a8-e7fd-f8ae6be615d8"
       },
       "execution_count": 55,
       "outputs": [
@@ -4349,11 +4349,11 @@
         "y.head()"
       ],
       "metadata": {
-        "id": "GI0h2_AKJu4H",
-        "outputId": "b1a31bef-de81-4c41-e967-782578f9734d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GI0h2_AKJu4H",
+        "outputId": "b1a31bef-de81-4c41-e967-782578f9734d"
       },
       "execution_count": 56,
       "outputs": [
@@ -4380,11 +4380,11 @@
         "len(y)"
       ],
       "metadata": {
-        "id": "16cX1ahPJ9Qu",
-        "outputId": "e5abc2d9-d18a-44ed-8c9d-5eced468e3fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "16cX1ahPJ9Qu",
+        "outputId": "e5abc2d9-d18a-44ed-8c9d-5eced468e3fc"
       },
       "execution_count": 57,
       "outputs": [
@@ -4421,11 +4421,11 @@
         "model.score(X_test,y_test)"
       ],
       "metadata": {
-        "id": "OUEWcYX2KODE",
-        "outputId": "c87d8163-de4b-401c-f760-d7bb4a92da0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OUEWcYX2KODE",
+        "outputId": "c87d8163-de4b-401c-f760-d7bb4a92da0a"
       },
       "execution_count": 59,
       "outputs": [
@@ -4453,11 +4453,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "yWT8r4FZKgLm",
-        "outputId": "93f76831-bc6d-4603-c67d-72ae22770b16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yWT8r4FZKgLm",
+        "outputId": "93f76831-bc6d-4603-c67d-72ae22770b16"
       },
       "execution_count": 60,
       "outputs": [
@@ -4520,12 +4520,12 @@
         "find_best_model_using_gridsearchcv(X,y)"
       ],
       "metadata": {
-        "id": "VMbquYXdKz6w",
-        "outputId": "3c25892c-5aef-4e9d-df96-dad4f779e270",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "VMbquYXdKz6w",
+        "outputId": "3c25892c-5aef-4e9d-df96-dad4f779e270"
       },
       "execution_count": 61,
       "outputs": [
@@ -4794,11 +4794,11 @@
         "clf.score(X_test,y_test)"
       ],
       "metadata": {
-        "id": "GFWb2n4QLPRV",
-        "outputId": "a84734ce-bb06-46b2-aa3a-92be74d38a4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GFWb2n4QLPRV",
+        "outputId": "a84734ce-bb06-46b2-aa3a-92be74d38a4a"
       },
       "execution_count": 62,
       "outputs": [
@@ -4816,9 +4816,249 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.head(3)"
+      ],
+      "metadata": {
+        "id": "9Z-C_mFEPiSR",
+        "outputId": "d8459529-8b34-4de8-f971-4eab80222f47",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     model  year  price transmission  mileage fuelType  tax   mpg  engineSize\n",
+              "0   Fiesta  2017  12000    Automatic    15944   Petrol  150  57.7         1.0\n",
+              "1    Focus  2018  14000       Manual     9083   Petrol  150  57.7         1.0\n",
+              "2    Focus  2017  13000       Manual    12456   Petrol  150  57.7         1.0"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-f0d8ad1d-cc6d-4c05-af7e-46b418002a5c\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>model</th>\n",
+              "      <th>year</th>\n",
+              "      <th>price</th>\n",
+              "      <th>transmission</th>\n",
+              "      <th>mileage</th>\n",
+              "      <th>fuelType</th>\n",
+              "      <th>tax</th>\n",
+              "      <th>mpg</th>\n",
+              "      <th>engineSize</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Fiesta</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>12000</td>\n",
+              "      <td>Automatic</td>\n",
+              "      <td>15944</td>\n",
+              "      <td>Petrol</td>\n",
+              "      <td>150</td>\n",
+              "      <td>57.7</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Focus</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>14000</td>\n",
+              "      <td>Manual</td>\n",
+              "      <td>9083</td>\n",
+              "      <td>Petrol</td>\n",
+              "      <td>150</td>\n",
+              "      <td>57.7</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Focus</td>\n",
+              "      <td>2017</td>\n",
+              "      <td>13000</td>\n",
+              "      <td>Manual</td>\n",
+              "      <td>12456</td>\n",
+              "      <td>Petrol</td>\n",
+              "      <td>150</td>\n",
+              "      <td>57.7</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f0d8ad1d-cc6d-4c05-af7e-46b418002a5c')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-f0d8ad1d-cc6d-4c05-af7e-46b418002a5c button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-f0d8ad1d-cc6d-4c05-af7e-46b418002a5c');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_price(model,year,transmission,mileage,fuelType,tax,mpg,engineSize):    \n",
+        "    loc_index = np.where(X.columns==model)[0][0]\n",
+        "\n",
+        "    x = np.zeros(len(X.columns))\n",
+        "    x[0] = year\n",
+        "    x[1] = transmission\n",
+        "    x[2] = mileage\n",
+        "    x[3] = fuelType\n",
+        "    x[4] = tax\n",
+        "    x[5] = mpg\n",
+        "    x[6] = engineSize\n",
+        "    if loc_index >= 0:\n",
+        "        x[loc_index] = 1\n",
+        "\n",
+        "    return clf.predict([x])[0]"
+      ],
       "metadata": {
         "id": "CsKPixOzOGWX"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "_EeqpzfYSbzy",
+        "outputId": "8ce948d2-96b5-4390-f2fc-e401b031f9e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "model            object\n",
+              "year              int64\n",
+              "price             int64\n",
+              "transmission     object\n",
+              "mileage           int64\n",
+              "fuelType         object\n",
+              "tax               int64\n",
+              "mpg             float64\n",
+              "engineSize      float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qdwGCfRuSSzm"
       },
       "execution_count": null,
       "outputs": []
